fix(android): resolve java URL constructor deprecation warnings using URI